fix: remove invisible loading text

--- a/packages/raystack/spinner/spinner.module.css
+++ b/packages/raystack/spinner/spinner.module.css
@@ -40,18 +40,6 @@
   25% { opacity: 0.2; }
 }
 
-.visuallyHidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .spinner-size-1 {
   width: var(--space-4);
   height: var(--space-4);
